# MultimodalExpressionAnalysis

./: README.md
3DFeatures/: readme.txt
AUFeatures/: CMakeLists.txt  readme.txt
AUFeatures/Output/: Counts.txt  ValidateARFF.txt  allFrameFiles.txt  results.csv
AUFeatures/Output/ARFF/: ALL_AU.arff  ALL_BND.arff  ALL_BND_AU.arff  T1_AU.arff  T1_BND.arff  T1_BND_AU.arff  T2_AU.arff  T2_BND.arff  T2_BND_AU.arff  T3_AU.arff  T3_BND.arff  T3_BND_AU.arff  T4_AU.arff  T4_BND.arff  T4_BND_AU.arff  T5_AU.arff  T5_BND.arff  T5_BND_AU.arff  T6_AU.arff  T6_BND.arff  T6_BND_AU.arff  T7_AU.arff  T7_BND.arff  T7_BND_AU.arff  T8_AU.arff  T8_BND.arff  T8_BND_AU.arff
AUFeatures/Output/scripts/: arff_executer.bat
AUFeatures/include/: ARFFLine.hpp  AU.hpp  parser.hpp
AUFeatures/source/: main.cpp  parser.cpp
LandmarkFeatures/: MatToBnd.m  SubjectCount.m
PhysiologicalFeatures/: readme.txt
